Name:		conduit-util
Version:	0.1.999
Synopsis:	utility functions for conduit and related packages
Description: 	utility functions for conduit and related packages
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4, 
                conduit == 0.4.*, 
                mtl == 2.*, 
                xml-conduit == 0.7.*, 
                bytestring == 0.9.*, 
                xml-types == 0.3.*, 
                transformers == 0.3.*, 
                HEPUtil >= 0.1.999 && < 0.3 
Build-Type: 	Simple

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all

Exposed-Modules: 
                 Data.Conduit.Util.Count
                 Data.Conduit.Util.Control
                 Data.Conduit.Util.Print 
                 Text.XML.Conduit.Parse.Util 


		 
